--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -15,7 +15,8 @@ add_library(libprg
         src/libprg/pilha.c
         src/include/libprg/libprg.h
         src/libprg/flia.c
-        src/libprg/lista_linear.c)
+        src/libprg/lista_linear.c
+        src/libprg/lista_encadeada.c)
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
 
