--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -17,7 +17,8 @@ add_library(libprg
         src/libprg/flia.c
         src/libprg/lista_linear.c
         src/libprg/lista_encadeada.c
-        src/libprg/lista_encadeada_dupla.c)
+        src/libprg/lista_encadeada_dupla.c
+        src/libprg/alg_ord_troca.c)
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
 
