--- a/libprg/CMakeLists.txt
+++ b/libprg/CMakeLists.txt
@@ -18,7 +18,9 @@ add_library(libprg
         src/libprg/lista_linear.c
         src/libprg/lista_encadeada.c
         src/libprg/lista_encadeada_dupla.c
-        src/libprg/alg_ord_troca.c)
+        src/libprg/alg_ord_troca.c
+        src/libprg/arvore_binaria.c
+)
 target_sources(libprg PUBLIC ${SOURCES})
 target_include_directories(libprg PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src/include)
 
